--- a/client/src/styles/base.css
+++ b/client/src/styles/base.css
@@ -275,9 +275,9 @@ body {
   list-style: none;
 }
 
-.postForm {
+/* .postForm {
 
-}
+} */
 
 .formHeader {
   color: rgb(128,23,39);
@@ -311,6 +311,6 @@ body {
   justify-content: space-between;
 }
 
-.formButton {
+/* .formButton {
 
-}
+} */
